fix: improve picture cropping fixes #10

--- a/style/component/popup-item.scss
+++ b/style/component/popup-item.scss
@@ -11,7 +11,7 @@
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 100%;
+		max-height: 100%;
 		padding: 1rem;
 		object-fit: contain;
 	}
