--- a/style/decoration/image-container.scss
+++ b/style/decoration/image-container.scss
@@ -37,8 +37,12 @@
 
 	&.individual {
 		.image-with-caption {
-			max-width: 80%;
-			width: 80%;
+			max-width: 60%;
+			width: 60%;
+
+			img {
+				max-height: 100%;
+			}
 		}
 	}
 }
